# Gmore-backend

./: .pdm-python  Makefile  deploy_lambda.sh  package_fastapi.sh  pyproject.toml  requirements.txt
.githooks/: commit-msg
app/: main.py  news_api.py  sample_news.json
app/news/: client.py  config.py  database.py  router.py  schemas.py  service.py  util.py
scripts/news/: business_news.json  entertainment_news.json  sports_news.json  tech_news.json
