[project]
name = "gmore-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nickwkt", email = "nickwkt2001@gmail.com"},
]
dependencies = [
    "news-please>=1.5.44",
    "lxml-html-clean>=0.1.1",
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.1",
    "httpx>=0.27.0",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.34.88",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
