[project]
name = "gmore-backend"
version = "0.1.0"
description = "Gmore backend service"
authors = [
    {name = "nickwkt", email = "nickwkt2001@gmail.com"},
]
dependencies = [
    "news-please>=1.5.44",
    "lxml-html-clean>=0.1.1",
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.1",
    "httpx>=0.27.0",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.34.88",
    "loguru>=0.7.2",
    "pydantic-settings>=2.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
start = "uvicorn main:app --reload --app-dir ./app"
format = "ruff format"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.2",
]

[tool.pyright]
include = ["app", "scripts"]
venvPath = "."
venv = ".venv"
