[project]
name = "gmore-backend"
version = "0.1.0"
description = "Gmore backend service"
authors = [
    {name = "nickwkt", email = "nickwkt2001@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.34.88",
    "loguru>=0.7.2",
    "pydantic-settings>=2.2.1",
    "mangum>=0.17.0",
    "google-generativeai>=0.5.2",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
start = "uvicorn main:app --reload --app-dir ./app"
format = "ruff format"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.2",
]

[tool.pyright]
include = ["app"]
venvPath = "."
venv = ".venv"
